[gd_scene load_steps=10 format=3 uid="uid://dsww2j4bmv25c"]

[ext_resource type="PackedScene" uid="uid://bjne51x01i88h" path="res://ui/main_screen/main_screen.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://dhml5twv4wkc5" path="res://ui/menus/sounds/menu_sound_player.tscn" id="2"]
[ext_resource type="Theme" path="res://ui/theme_main_menu.tres" id="3"]
[ext_resource type="Texture2D" uid="uid://c2tqk03snyo2y" path="res://ui/main_screen/gamepads/xbox_a_button.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://c0bavtgts8dwh" path="res://ui/main_screen/gamepads/playstation_cross_buttton.svg" id="5"]
[ext_resource type="Texture2D" uid="uid://b01jiu5efjmmg" path="res://ui/main_screen/gamepads/nintendob_button.svg" id="6"]
[ext_resource type="Script" uid="uid://cfq0mnv0qt3d3" path="res://ui/main_menu_texts.gd" id="7"]
[ext_resource type="Script" uid="uid://ca8tj1nwvpepa" path="res://ui/main_menu.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://bv00wk2go2l6s" path="res://ui/screen_fader.tscn" id="9"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
script = ExtResource("8")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainScreen" parent="Background" instance=ExtResource("1")]
layout_mode = 1

[node name="Context" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.6
anchor_top = 0.6
anchor_right = 0.95
anchor_bottom = 0.75
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0

[node name="Texts" type="Control" parent="Context"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("7")

[node name="HBoxContainer" type="HBoxContainer" parent="Context/Texts"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 28.0
offset_bottom = 28.0
alignment = 1

[node name="Press" type="Label" parent="Context/Texts/HBoxContainer"]
layout_mode = 2
text = "Press"

[node name="CenterContainer" type="CenterContainer" parent="Context/Texts/HBoxContainer"]
layout_mode = 2

[node name="AnyKey" type="Label" parent="Context/Texts/HBoxContainer/CenterContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.301961, 0.65098, 1, 1)
text = "any key"

[node name="XboxA" type="TextureRect" parent="Context/Texts/HBoxContainer/CenterContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("4")

[node name="PlaystationX" type="TextureRect" parent="Context/Texts/HBoxContainer/CenterContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("5")

[node name="NintendoB" type="TextureRect" parent="Context/Texts/HBoxContainer/CenterContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("6")

[node name="ToStart" type="Label" parent="Context/Texts/HBoxContainer"]
layout_mode = 2
text = "to start"

[node name="FadeLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="ScreenFader" parent="FadeLayer" instance=ExtResource("9")]
duration_fade_out = 1.0

[node name="MenuSoundPlayer" parent="." instance=ExtResource("2")]
